添加公司模块 Signed-off-by: simon <simonHlf@163.com>

--- a/pages/basic/addDriverYyy/index.wxml
+++ b/pages/basic/addDriverYyy/index.wxml
@@ -1,6 +1,6 @@
 <view class="modTit padd">
 	<view class="lineView"></view>
-	<view>添加{{currTit}}</view>
+	<view>{{currTit}}</view>
 </view>
 <form bindsubmit="formSubmit">
 	<view class="driverMod padd">
