--- a/pages/dealWithCompApply/index.wxss
+++ b/pages/dealWithCompApply/index.wxss
@@ -1,5 +1,5 @@
 page{
-	background:#efefef ;
+	background:#fff ;
 }
 .waitDeal{
 	background: #fff;
@@ -12,9 +12,14 @@ page{
 .dealListItem .imageView{
 	width: 86rpx;
 	height: 86rpx;
-	background: pink;
 	border-radius: 50%;
 	float: left;
+}
+.dealListItem .imageView image{
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	overflow: hidden;
 }
 .dealListCon{
 	float: left;
@@ -31,6 +36,7 @@ page{
 .applyDate{
 	font-size: 24rpx;
 	color: #a9a9a9;
+	margin-bottom: 15rpx;
 }
 .dealBtnWrap{
 	width: 100%;
